--- a/_posts/2015-12-05-LED_Bulbs.md
+++ b/_posts/2015-12-05-LED_Bulbs.md
@@ -9,7 +9,7 @@ categories:
 ---
 
 ### TL;DR
-Your best bet is probably the [Philips 455955][455955] bulb.  It's 60w equivalent, uses 8w, has a
+Your best bet is probably the [Philips 455955][455955] bulb.  It's 60w equivalent, uses 8w, has a 
 daylight color temperature (5000k), and is about the best price I've run into so far.  If you want
 a more orange bulb, there's a similar model that's cheaper and runs at 2700k (I haven't tried that
 model but I assume they're essentially identical).  Amazon and Home Depot both sell the 455955 but 
@@ -97,6 +97,10 @@ LED point-sources and unless you use a camera with a low ISO and a fast shutter 
 look like a regular light source.
 
 #### [JACKYLED 48"][JAKY48]{:target="_blank"}
+UPDATE (2015-12-24): Looks like the old store page isn't valid.  I got 
+[these](http://amzn.com/B01587Z3GA) this time.  They're slightly more efficient but otherwise have 
+the same specs.
+
 My folks had 4x 48" fluorescent tubes in their dining room and 2x 48" tubes in their kitchen.  
 Growing up, they always complained about how dim both rooms were and we also frequently had issues
 with the ballasts in the enclosures.  For Christmas 2014, I got them the bulbs to replace their
