Establishes new layout and style

--- a/_posts/2015-12-05-LED_Bulbs.md
+++ b/_posts/2015-12-05-LED_Bulbs.md
@@ -9,33 +9,36 @@ categories:
 ---
 
 ### TL;DR
-Your best bet is probably the [Philips 455955][455955] bulb.  It's 60w equivalent, uses 8w, has a 
-daylight color temperature (5000k), and is about the best price I've run into so far.  If you want
-a more orange bulb, there's a similar model that's cheaper and runs at 2700k (I haven't tried that
-model but I assume they're essentially identical).  Amazon and Home Depot both sell the 455955 but 
-Amazon seems to price it at about double what Home Depot does.  You can probably find it elsewhere 
-too.
+Your best bet is probably the [Philips 455955][455955] bulb.  It's 60w
+equivalent, uses 8w, has a daylight color temperature (5000k), and is about the
+best price I've run into so far.  If you want a more orange bulb, there's a
+similar model that's cheaper and runs at 2700k (I haven't tried that model but
+I assume they're essentially identical).  Amazon and Home Depot both sell the
+455955 but Amazon seems to price it at about double what Home Depot does.  You
+can probably find it elsewhere too.
 
-
+<!--more-->
 
 ### Intro
-I first was exposed to LED bulbs in, if I recall correctly, around 2003 in a bathroom at 
-[Tryon Creek State Park][tcsp].  I don't know why they were using them, but they had a bunch of 48"
-LED tube bulbs instead of the standard 48" fluorescent bulbs you'd normally expect to see in that 
-sort of fixture.  I didn't think much of it at the time but when I saw the NanoLeaf on Kickstarter
+I first was exposed to LED bulbs in, if I recall correctly, around 2003 in a
+bathroom at [Tryon Creek State Park][tcsp].  I don't know why they were using
+them, but they had a bunch of 48" LED tube bulbs instead of the standard 48"
+fluorescent bulbs you'd normally expect to see in that sort of fixture.  I
+didn't think much of it at the time but when I saw the NanoLeaf on Kickstarter
 in 2012-2013, I got excited pretty quickly.
 
 [tcsp]: http://oregonstateparks.org/index.cfm?do=parkPage.dsp_parkPage&parkId=103
 
-I've been buying LED bulbs for a while at this point.  I'm a bit picky about my light sources and 
-I've found that LED bulbs do a good job of satisfying my criteria.  In particular:
+I've been buying LED bulbs for a while at this point.  I'm a bit picky about my
+light sources and I've found that LED bulbs do a good job of satisfying my
+criteria.  In particular:
 
 * I don't like CFLs due to the risk of toxic gases escaping if they break.
-* I like my light sources to be at around 5000k.  
-* I particularly dislike the orange glow that standard 2700k bulbs give off.  
+* I like my light sources to be at around 5000k.
+* I particularly dislike the orange glow that standard 2700k bulbs give off.
 
-As an additional note, I don't really care if the bulbs are dimmable, so that isn't something I've 
-focused on when buying bulbs.
+As an additional note, I don't really care if the bulbs are dimmable, so that
+isn't something I've focused on when buying bulbs.
 
 
 
@@ -54,9 +57,9 @@ So far, I've purchased (in chronological order from oldest to newest):
 |   Philips 455717 (A19)            |   14.5w (100w equivalent) |   5000k   |   $4.97           |   1   |   [Home Depot][455717]{:target="_blank"}  |   no      |
 
 [NnLeaf]: https://www.kickstarter.com/projects/nanoleaf/nanolight-the-worlds-most-energy-efficient-lightbu
-[corn27]: http://amzn.com/B006NTW1OA
-[433235]: http://amzn.com/B00JM72W6C
-[JAKY48]: http://amzn.com/B00IBVNDNG
+[corn27]: https://www.amazon.com/dp/B006NTW1OA
+[433235]: https://www.amazon.com/dp/B00JM72W6C
+[JAKY48]: https://www.amazon.com/dp/B00IBVNDNG
 [455955]: http://www.homedepot.com/p/206178204
 [455717]: http://www.homedepot.com/p/205862056
 
@@ -66,57 +69,68 @@ So far, I've purchased (in chronological order from oldest to newest):
 ### Summary of Thoughts
 
 #### [NanoLeaf][NnLeaf]{:target="_blank"}
-I purchased this back in late 2012 / early 2013.  At the time there weren't really any options if 
-you wanted to get anywhere near 100w equivalent.  At this point, though, they are way too expensive 
-for what they  are.  Even at the time, the NanoLeaf didn't deliver $45 worth of quality, despite 
-of the lack of other options.
+I purchased this back in late 2012 / early 2013.  At the time there weren't
+really any options if you wanted to get anywhere near 100w equivalent.  At this
+point, though, they are way too expensive for what they  are.  Even at the
+time, the NanoLeaf didn't deliver $45 worth of quality, despite of the lack of
+other options.
 
 #### [Generic Corn-style][corn27]{:target="_blank"}
-I got these pretty soon after the NanoLeaf finally delivered (early 2013).  I wasn't satisfied with 
-the price of the NanoLeaf given what it offered and I wanted to explore other options.  At the time,
-I thought I'd be fine with 40w equivalent but it really didn't cut it for illuminating my apartment
-and I have since decided that 60w equivalent is a minimum standard for me (I like to keep my living 
-space very brightly lit).
+I got these pretty soon after the NanoLeaf finally delivered (early 2013).  I
+wasn't satisfied with the price of the NanoLeaf given what it offered and I
+wanted to explore other options.  At the time, I thought I'd be fine with 40w
+equivalent but it really didn't cut it for illuminating my apartment and I have
+since decided that 60w equivalent is a minimum standard for me (I like to keep
+my living space very brightly lit).
 
-The build quality on these is terrible.  At the time, there weren't any other viable options for 
-~$10 which is why I got them (I was hoping to find a demonstration that the NanoLeaf was severely 
-overpriced).  They get quite hot and it took around a month for the steams to break down and the 
-bulbs to start falling apart.  I tried to fix most of them with hot glue which actually managed to 
-hold them together reasonably well given the heat they operate at. I have a few that are still going 
-strong but I won't buy any more.  At the time they may have been worth $10 but at this point I 
-wouldn't pay more than a dollar or two for them and then I'd only use them in infrequently accessed
+The build quality on these is terrible.  At the time, there weren't any other
+viable options for ~$10 which is why I got them (I was hoping to find a
+demonstration that the NanoLeaf was severely overpriced).  They get quite hot
+and it took around a month for the steams to break down and the bulbs to start
+falling apart.  I tried to fix most of them with hot glue which actually
+managed to hold them together reasonably well given the heat they operate at. I
+have a few that are still going strong but I won't buy any more.  At the time
+they may have been worth $10 but at this point I wouldn't pay more than a
+dollar or two for them and then I'd only use them in infrequently accessed
 locations.
 
 #### [Philips 433235 SlimStyle][433235]{:target="_blank"}
-I first picked one of these up in July 2014 and the most resent few I've ordered were in July 2015 
-(at which point I had them in  nearly every socket in my apartment).  I've been really happy with 
-these bulbs.  They have been exceptionally well priced, they go on say semi-frequently (see 
-[3camels](http://camelcamelcamel.com/product/B00JM72W6C){:target="_blank"}).  The build quality is
-excellent and they distribute light quite evenly.  The plastic case does a good job diffusing the 
-LED point-sources and unless you use a camera with a low ISO and a fast shutter speed, it'll just
-look like a regular light source.
+I first picked one of these up in July 2014 and the most resent few I've
+ordered were in July 2015 (at which point I had them in  nearly every socket in
+my apartment).  I've been really happy with these bulbs.  They have been
+exceptionally well priced, they go on say semi-frequently (see
+[3-Camels][3camels]{:target="_blank"}).  The build quality is excellent and
+they distribute light quite evenly.  The plastic case does a good job diffusing
+the LED point-sources and unless you use a camera with a low ISO and a fast
+shutter speed, it'll just look like a regular light source.
+
+[3camels]: http://camelcamelcamel.com/product/B00JM72W6C
 
 #### [JACKYLED 48"][JAKY48]{:target="_blank"}
-UPDATE (2015-12-24): Looks like the old store page isn't valid.  I got 
-[these](http://amzn.com/B01587Z3GA) this time.  They're slightly more efficient but otherwise have 
-the same specs.
+UPDATE (2015-12-24): Looks like the old store page isn't valid.  I got
+[these](http://amzn.com/B01587Z3GA) this time.  They're slightly more efficient
+but otherwise have the same specs.
 
-My folks had 4x 48" fluorescent tubes in their dining room and 2x 48" tubes in their kitchen.  
-Growing up, they always complained about how dim both rooms were and we also frequently had issues
-with the ballasts in the enclosures.  For Christmas 2014, I got them the bulbs to replace their
-kitchen and dining room lights.  They ended up only installing two of the bulbs in the dining room 
-because they thought the bulbs were too bright to install all four.  I haven't seen the bulbs in 
-person but it sounds like they liked them a lot and they're using the two spare bulbs in my dad's 
-wood shop.  They asked for more for Christmas this year (2015).  I think they were pretty reasonably
-priced before (at $23) but I'm glad to see they've dropped a lot in the past year.
+My folks had 4x 48" fluorescent tubes in their dining room and 2x 48" tubes in
+their kitchen. Growing up, they always complained about how dim both rooms were
+and we also frequently had issues with the ballasts in the enclosures.  For
+Christmas 2014, I got them the bulbs to replace their kitchen and dining room
+lights.  They ended up only installing two of the bulbs in the dining room
+because they thought the bulbs were too bright to install all four.  I haven't
+seen the bulbs in person but it sounds like they liked them a lot and they're
+using the two spare bulbs in my dad's wood shop.  They asked for more for
+Christmas this year (2015).  I think they were pretty reasonably priced before
+(at $23) but I'm glad to see they've dropped a lot in the past year.
 
 #### [Philips 455955 (60w equiv)][455955]{:target="_blank"} and [Philips 455717 (100w equiv)][455717]{:target="_blank"}
-I got these on a whim during my most recent trip to Home Depot.  I'd seen them on the Home Depot 
-website before so I figured I'd give them a shot.  I'm glad to finally see 100w equivalent bulbs at 
-a sane price (Amazon sells them too but for roughly double the price).  I also saw dimmable versions
-but as I mentioned above, I don't care about dimmable (and they cost double what the non-dimmable 
-bulbs cost).  
+I got these on a whim during my most recent trip to Home Depot.  I'd seen them
+on the Home Depot website before so I figured I'd give them a shot.  I'm glad
+to finally see 100w equivalent bulbs at a sane price (Amazon sells them too but
+for roughly double the price).  I also saw dimmable versions but as I mentioned
+above, I don't care about dimmable (and they cost double what the non-dimmable
+bulbs cost).
 
-The main difference between these and the Philips 433235 SlimStyle is that these don't cast as much
-light back toward the socket.  This may either be a good thing or a bad thing depending on 
-application.  Also, the difference is pretty small.
+The main difference between these and the Philips 433235 SlimStyle is that
+these don't cast as much light back toward the socket.  This may either be a
+good thing or a bad thing depending on application.  Also, the difference is
+pretty small.
