Fix tags and categories, add search, update accessability on blog pagination

--- a/_posts/2015-12-05-LED_Bulbs.md
+++ b/_posts/2015-12-05-LED_Bulbs.md
@@ -3,12 +3,13 @@ layout: blog
 title: LED Bulbs
 section: Blog
 last_modified_at: 2015-12-05
-categories:
+categories: Musings
+tags:
 - Household
 - LED
 ---
 
-### TL;DR
+# TL;DR
 Your best bet is probably the [Philips 455955][455955] bulb.  It's 60w
 equivalent, uses 8w, has a daylight color temperature (5000k), and is about the
 best price I've run into so far.  If you want a more orange bulb, there's a
@@ -19,7 +20,7 @@ can probably find it elsewhere too.
 
 <!--more-->
 
-### Intro
+# Intro
 I first was exposed to LED bulbs in, if I recall correctly, around 2003 in a
 bathroom at [Tryon Creek State Park][tcsp].  I don't know why they were using
 them, but they had a bunch of 48" LED tube bulbs instead of the standard 48"
@@ -43,7 +44,7 @@ isn't something I've focused on when buying bulbs.
 
 
 
-### Bulbs Tested
+# Bulbs Tested
 
 So far, I've purchased (in chronological order from oldest to newest):
 
@@ -66,16 +67,16 @@ So far, I've purchased (in chronological order from oldest to newest):
 
 
 
-### Summary of Thoughts
+# Summary of Thoughts
 
-#### [NanoLeaf][NnLeaf]{:target="_blank"}
+## [NanoLeaf][NnLeaf]{:target="_blank"}
 I purchased this back in late 2012 / early 2013.  At the time there weren't
 really any options if you wanted to get anywhere near 100w equivalent.  At this
 point, though, they are way too expensive for what they  are.  Even at the
 time, the NanoLeaf didn't deliver $45 worth of quality, despite of the lack of
 other options.
 
-#### [Generic Corn-style][corn27]{:target="_blank"}
+## [Generic Corn-style][corn27]{:target="_blank"}
 I got these pretty soon after the NanoLeaf finally delivered (early 2013).  I
 wasn't satisfied with the price of the NanoLeaf given what it offered and I
 wanted to explore other options.  At the time, I thought I'd be fine with 40w
@@ -94,7 +95,7 @@ they may have been worth $10 but at this point I wouldn't pay more than a
 dollar or two for them and then I'd only use them in infrequently accessed
 locations.
 
-#### [Philips 433235 SlimStyle][433235]{:target="_blank"}
+## [Philips 433235 SlimStyle][433235]{:target="_blank"}
 I first picked one of these up in July 2014 and the most resent few I've
 ordered were in July 2015 (at which point I had them in  nearly every socket in
 my apartment).  I've been really happy with these bulbs.  They have been
@@ -106,7 +107,7 @@ shutter speed, it'll just look like a regular light source.
 
 [3camels]: http://camelcamelcamel.com/product/B00JM72W6C
 
-#### [JACKYLED 48"][JAKY48]{:target="_blank"}
+## [JACKYLED 48"][JAKY48]{:target="_blank"}
 UPDATE (2015-12-24): Looks like the old store page isn't valid.  I got
 [these](http://amzn.com/B01587Z3GA) this time.  They're slightly more efficient
 but otherwise have the same specs.
@@ -122,7 +123,7 @@ using the two spare bulbs in my dad's wood shop.  They asked for more for
 Christmas this year (2015).  I think they were pretty reasonably priced before
 (at $23) but I'm glad to see they've dropped a lot in the past year.
 
-#### [Philips 455955 (60w equiv)][455955]{:target="_blank"} and [Philips 455717 (100w equiv)][455717]{:target="_blank"}
+## [Philips 455955 (60w equiv)][455955]{:target="_blank"} and [Philips 455717 (100w equiv)][455717]{:target="_blank"}
 I got these on a whim during my most recent trip to Home Depot.  I'd seen them
 on the Home Depot website before so I figured I'd give them a shot.  I'm glad
 to finally see 100w equivalent bulbs at a sane price (Amazon sells them too but
