improve book review automation

--- a/_posts/2022-12-31-2022s-Books.md
+++ b/_posts/2022-12-31-2022s-Books.md
@@ -21,15 +21,4 @@ This year I read {{ reviews.size }} books.  My favorite books from this year wer
 
 <!--more-->
 
-{% for review in reviews %}
-<div class="book-review" id='{{review.title|slugify: "ascii"}}'>
-  <section data-author>{{review.authors|join:", "}}</section>
-  <section data-title>{{review.title}}</section>
-  <section data-series>{{review.series}}</section>
-  <section data-narrator>{{review.narrators|join:", "}}</section>
-  <section data-vibe>{{review.vibe}}</section>
-  <section data-summary>{{review.summary}}</section>
-  <section data-rating>{{review.rating}}</section>
-  <section data-finished>{{review.finished| date: "%b %-d"}}</section>
-</div>
-{% endfor %}
+{% include review_structure.html %}
