Add favorite books so far from 2025

--- a/_posts/2025-12-31-2025s-Books.md
+++ b/_posts/2025-12-31-2025s-Books.md
@@ -12,7 +12,10 @@ tags:
 
 This year I read {{ reviews.size }} books.  My favorite books from this year were:
 
-- tbd
+- [Dogs of War](#dogs-of-war)
+- [Bear Head](#bear-head)
+- [Alien Clay](#alien-clay)
+- [Children of Time](#children-of-time)
 
 <!--more-->
 
